<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="enter_a_number">enter a number</string>
    <string name="check_answer">Check Answer</string>
    <string name="easy">easy</string>
    <string name="medium">medium</string>
    <string name="hard">hard</string>
    <string name="multiplication_game">Multiplication Game</string>
    <string name="enter_a_country">enter a country</string>
    <string name="go_to_game">go to game</string>
    <string name="multiplication_fun_game">Multiplication Fun Game</string>
</resources>