<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/home"
        android:text=""
        android:textSize="25sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/home"
        android:text="@string/multiplication_game"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        android:layout_margin="50dp"
        android:gravity="center"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/home"
        android:layout_marginStart="10dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#30ffffff"
        android:drawableStart="@drawable/ic_baseline_info_24"
        android:drawablePadding="20dp"
        android:hint="@string/enter_a_number"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:autofillHints="" />

    <Button
        android:id="@+id/validate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/design_default_color_secondary"
        android:text="@string/check_answer" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/social"
        android:layout_alignParentBottom="true"
        android:gravity="center">


        <Button
            android:layout_width="80dp"
            android:layout_height="48dp"
            android:text="@string/easy"
            android:layout_margin="20dp"
            android:textColor="@color/white"
            android:id="@+id/easy_btn"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:layout_width="85dp"
            android:textColor="@color/white"
            android:text="@string/medium"
            android:id="@+id/medium_btn"
            android:textSize="11sp"
            android:layout_height="48dp"
            android:layout_margin="20dp"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:layout_width="80dp"
            android:layout_height="48dp"
            android:textColor="@color/white"
            android:id="@+id/hard_btn"
            android:text="@string/hard"
            android:layout_margin="20dp"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>


</RelativeLayout>